https resources fix, flickering image (size reduce)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -230,7 +230,7 @@ h4 { font-family: $font-family; }
 }
 
 .jumbotron {
-	background: url(/assets/images/bg3.png) no-repeat center center;
+	background: url(/assets/images/bg3.jpg) no-repeat center center;
 	background-size: cover;
 	text-shadow: 2px 2px 2px #000;
 	text-align: center;
